--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
    
 </head>
 <body>
@@ -1162,8 +1162,8 @@ Thích hợp cho việc di chuyển hoặc xách tay hoặc cố định bên tr
             </p>
         </div>
     </footer>
-    <script src="js/script.js" ></script>
-    <script src="js/cart.js"></script>
-    <script src="js/login.js"></script>
+    <script src="./script.js" ></script>
+    <script src="./cart.js"></script>
+    <script src="./login.js"></script>
 </body>
 </html>
